delete main.css proprieters

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </header>
     <section>
         <div class="container">
-            <img class="profile-photo" src="./images/profile_photo_circle.png" alt="Foto de Perfil com Formato de Circulo">
-        </div>
-        <div class="profile-title">
+            <div class="profile-index">
+                <img class="profile-photo" src="./images/profile_photo_circle.png" alt="Foto de Perfil com Formato de Circulo">
             <h2>Gabriel Nascimento </h2><br>
+            </div>
         </div>
         <div class="profile-description">
             <h5>Analista de Suporte | Analista de Sistemas | Dev JR</h4>
