--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
-    <title>Menu Responsivo</title>
+    <title>Gabriel Nascimento</title>
 </head>
 
 <body>
@@ -43,8 +43,7 @@
         </div>
     </header>
 
+    
     <script src="./script.js"></script>
 </body>
-<!-- FEITO POR: LARISSA V. KICH  -->
-
 </html>
