--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <section id="contact">
     <div class="container">
         <h2>Contato</h2>
-        <div class="contact-methods">
+        <div class="contact-methods-1">
             <div>
                 <h3>Me envie uma mensagem</h3>
                 <form>
@@ -108,29 +108,32 @@
                     <button type="submit">Enviar</button>
                 </form>
             </div>
-            <div class="social-links">
-                <h3>Minhas Redes</h3>
-                <ul>
-                    <li>
-                        <a href="https://www.instagram.com/gabrielrmn__/" target="_blank">
-                            <img src="./images/instagram.png" alt="logo instagram">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/GabrielNascimentoCorp" target="_blank">
-                            <img src="./images/logo_git_white_png-removebg-preview.png" alt="logo github">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/gabriel-nascimento-899977204/" target="_blank">
-                            <img src="./images/logo_linkedIN.png" alt="logo logo_linkedIN">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <h3>Meu Contato</h3>
-                <p>E-mail - gabrielnascimento.corp@gmail.com | Tel - (11) 97158-2001</p>
+            <div class="contact-methods-2">
+                <div class="social-links">
+                    <h3>Minhas Redes</h3>
+                    <ul>
+                        <li>
+                            <a href="https://www.instagram.com/gabrielrmn__/" target="_blank">
+                                <img src="./images/instagram.png" alt="logo instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/GabrielNascimentoCorp" target="_blank">
+                                <img src="./images/logo_git_white_png-removebg-preview.png" alt="logo github">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/gabriel-nascimento-899977204/" target="_blank">
+                                <img src="./images/logo_linkedIN.png" alt="logo logo_linkedIN">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Meu Contato</h3>
+                    <p>E-mail - gabrielnascimento.corp@gmail.com</p><br>
+                    <p>Tel - (11) 97158-2001</p>
+                </div>
             </div>
         </div>
     </div>
