add itens and proprieters on index.html and main.css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="login-button">
-                <button><a href="#">Entrar</a></button>
+                <button><a href="#">Home</a></button>
             </div>
 
             <div class="mobile-menu-icon">
@@ -136,6 +136,13 @@
                 </div>
             </div>
         </div>
+    </div>
+</section>
+<section>
+    <div class="logo-wpp">
+        <a href="https://wa.me/5511971582001" target="_blank">
+                <img src="./images/whatsapp-logo-png.png" alt="">
+        </a>
     </div>
 </section>
 
