--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Gabriel Nascimento</title>
     <link rel="icon" href="./images/icons8-g-67.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -140,8 +141,8 @@
 </section>
 <section>
     <div class="logo-wpp">
-        <a href="https://wa.me/5511971582001" target="_blank">
-                <img src="./images/whatsapp-logo-png.png" alt="">
+        <a class="whatsapp-link" href="https://wa.me/5511971582001" target="_blank">
+            <i class="fa fa-whatsapp"></i>
         </a>
     </div>
 </section>
