add information  on index

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 Me chamo Gabriel, tenho 23 anos e tenho 4 anos de experiência na área da tecnologia. Tenho experiência tanto com a
                 parte de Hardware com habilidades para montagem e manutenção de computadores Dell, HP, Lenovo e Macs quanto
                 na parte de Softwares, os quais são os principais que acompanham o Microsoft Windows e MacOS. Tenho
-                conhecimento em deploy de computadores Windows, conhecimento avançado em aplicações MacOS, 
+                conhecimento em deploy de computadores Windows e Mac, conhecimento avançado em aplicações MacOS, 
                  ferramentas do pacote Adobe, pacote office 365, controle de Acess, Termination e
                 Modification, Active Directory, ERP AdSolutions e suporte para Infraestura de Redes e aspirante a Dev (esse é o meu primeiro projeto!)
             </p><br>
