--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="nav-list">
                 <ul>
-                    <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
+                    <li class="nav-item"><a href="#contact" class="nav-link">Contato</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Trabalhos</a></li>
                 </ul>
             </div>
@@ -95,50 +95,49 @@
 
 <!-- ESTRUTURA SECTION 3 -->
 
+
 <section id="contact">
     <div class="container">
         <h2>Contato</h2>
-        <div class="contact-methods-1">
+        <div class="contact-methods">
             <div>
                 <h3>Me envie uma mensagem</h3>
-                <form>
-                    <input type="text" placeholder="Seu nome ou nome da empresa" required>
-                    <input type="email" placeholder="Seu e-mail" required>
-                    <input type="tel" placeholder="Seu telefone (opcional)" >
+                <form action="https://api.sheetmonkey.io/form/3v9auXNjSBcwYJwnsn4fGi" method="post">
+                    <input type="text"  name="name" placeholder="Seu nome ou nome da empresa" required>
+                    <input type="email" name="e-mail" placeholder="Seu e-mail" required>
+                    <input type="tel" name="telefone" placeholder="Seu telefone (opcional)" >
                     <textarea placeholder="Digite sua mensagem" required></textarea>
                     <button type="submit">Enviar</button>
                 </form>
             </div>
-            <div class="contact-methods-2">
-                <div class="social-links">
-                    <h3>Minhas Redes</h3>
-                    <ul>
-                        <li>
-                            <a href="https://www.instagram.com/gabrielrmn__/" target="_blank">
-                                <img src="./images/instagram.png" alt="logo instagram">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/GabrielNascimentoCorp" target="_blank">
-                                <img src="./images/logo_git_white_png-removebg-preview.png" alt="logo github">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/gabriel-nascimento-899977204/" target="_blank">
-                                <img src="./images/logo_linkedIN.png" alt="logo logo_linkedIN">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>Meu Contato</h3>
-                    <p>E-mail - gabrielnascimento.corp@gmail.com</p><br>
-                    <p>Tel - (11) 97158-2001</p>
-                </div>
+            <div class="social-links">
+                <h3>Minhas Redes</h3>
+                <ul>
+                    <li>
+                        <a href="https://www.instagram.com/gabrielrmn__/" target="_blank">
+                            <img src="./images/instagram.png" alt="logo instagram">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/GabrielNascimentoCorp" target="_blank">
+                            <img src="./images/logo_git_white_png-removebg-preview.png" alt="logo github">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/gabriel-nascimento-899977204/" target="_blank">
+                            <img src="./images/logo_linkedIN.png" alt="logo logo_linkedIN">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>Meu Contato</h3>
+                <p>E-mail - gabrielnascimento.corp@gmail.com | Tel - (11) 97158-2001</p>
             </div>
         </div>
     </div>
 </section>
+
 <section>
     <div class="logo-wpp">
         <a class="whatsapp-link" href="https://wa.me/5511971582001" target="_blank">
