--- a/contacts.html
+++ b/contacts.html
@@ -1,52 +1,12 @@
-<!-- ESTRUTURA SECTION 3 -->
-
-
-<section id="contact">
-    <div class="container">
-        <h2>Contato</h2>
-        <div class="contact-methods">
-            <div>
-                <h3>Me envie uma mensagem</h3>
-                <form action="https://api.sheetmonkey.io/form/3v9auXNjSBcwYJwnsn4fGi" method="post">
-                    <input type="text"  name="name" placeholder="Seu nome ou nome da empresa" required>
-                    <input type="email" name="e-mail" placeholder="Seu e-mail" required>
-                    <input type="tel" name="telefone" placeholder="Seu telefone (opcional)" >
-                    <textarea placeholder="Digite sua mensagem" required></textarea>
-                    <button type="submit">Enviar</button>
-                </form>
-            </div>
-            <div class="social-links">
-                <h3>Minhas Redes</h3>
-                <ul>
-                    <li>
-                        <a href="https://www.instagram.com/gabrielrmn__/" target="_blank">
-                            <img src="./images/instagram.png" alt="logo instagram">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/GabrielNascimentoCorp" target="_blank">
-                            <img src="./images/logo_git_white_png-removebg-preview.png" alt="logo github">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/gabriel-nascimento-899977204/" target="_blank">
-                            <img src="./images/logo_linkedIN.png" alt="logo logo_linkedIN">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <h3>Meu Contato</h3>
-                <p>E-mail - gabrielnascimento.corp@gmail.com | Tel - (11) 97158-2001</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="wpp-area">
-    <div class="logo-wpp">
-        <a class="whatsapp-link" href="https://wa.me/5511971582001" target="_blank">
-            <i class="fa fa-whatsapp"></i>
-        </a>
-    </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document
+    </title>
+</head>
+<body>
+    
+</body>
+</html>
