--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"><a href="#biography" class="nav-link">Contato</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Trabalhos</a></li>
+                    <li class="nav-item"><a href="./contacts.html" class="nav-link" target="_blank">Trabalhos</a></li>
                 </ul>
             </div>
 
@@ -39,7 +39,7 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"><a href="#biography" class="nav-link">Contato</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Trabalhos</a></li>
+                <li class="nav-item"><a href="./contacts.html" class="nav-link" target="_blank">Trabalhos</a></li>
             </ul>
 
             <div class="login-button">
@@ -94,14 +94,9 @@
     <div class="container-wrapper">
         <div class="wrapper">
             <div class="wrapper-holder">
-                <div id="slider-img-1"></div>
-                <div id="slider-img-2"></div>
+                <a id="slider-img-1" href="./contacts.html" target="_blank"></a>
+                <a id="slider-img-2" href="./contacts.html" target="_blank"></a>
             </div>
-        </div>
-
-        <div class="button-holder">
-            <a href="#slider-img-1" class="button"></a>
-            <a href="#slider-img-2" class="button"></a>
         </div>
     </div>
 </section>
