--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
     <title>Gabriel Nascimento</title>
+    <link rel="stylesheet" href="./media_queries.css">
     <link rel="icon" href="./images/icons8-g-67.png">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -22,6 +23,7 @@
             </div>
             <div class="nav-list">
                 <ul>
+                    <li class="nav-item"><a href="#biography" class="nav-link">SOBRE MIM</a></li>
                     <li class="nav-item"><a href="#biography" class="nav-link">Contato</a></li>
                     <li class="nav-item"><a href="./contacts.html" class="nav-link" target="_blank">Trabalhos</a></li>
                 </ul>
