--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <nav class="nav-bar">
             <div class="logo">
-                <h1>Teste</h1>
+                <a href="#"><h1>Portifólio</h1></a>
             </div>
             <div class="nav-list">
                 <ul>
