update itens on works.html an index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./stylesheet/index/main.css">
+    <link rel="stylesheet" href="./media_queries.css">
     <title>Gabriel Nascimento</title>
     <link rel="stylesheet" href="./main.css">
     <link rel="icon" href="./images/icons8-g-67.png">
@@ -24,13 +24,13 @@
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"><a href="#biography" class="nav-link">SOBRE MIM</a></li>
-                    <li class="nav-item"><a href="#biography" class="nav-link">Contato</a></li>
-                    <li class="nav-item"><a href="./contacts.html" class="nav-link" target="_blank">Trabalhos</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
+                    <li class="nav-item"><a href="./works.html" class="nav-link" target="_blank">Trabalhos</a></li>
                 </ul>
             </div>
 
             <div class="login-button">
-                <button><a href="#">Home</a></button>
+                <button><a href="./index.html">Home</a></button>
             </div>
 
             <div class="mobile-menu-icon">
@@ -46,7 +46,7 @@
             </ul>
 
             <div class="login-button">
-                <button><a href="#">Entrar</a></button>
+                <button><a href="#">Home</a></button>
             </div>
         </div>
     </header>
@@ -97,8 +97,8 @@
     <div class="container-wrapper">
         <div class="wrapper">
             <div class="wrapper-holder">
-                <a id="slider-img-1" href="./contacts.html" target="_blank"></a>
-                <a id="slider-img-2" href="./contacts.html" target="_blank"></a>
+                <a id="slider-img-1" href="./works.html" target="_blank"></a>
+                <a id="slider-img-2" href="./works.html" target="_blank"></a>
             </div>
         </div>
     </div>
