--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 <ul>
                     <li class="nav-item"><a href="#biography" class="nav-link">SOBRE MIM</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
-                    <li class="nav-item"><a href="./works.html" class="nav-link" target="_blank">Trabalhos</a></li>
+                    <li class="nav-item"><a href="./works.html" class="nav-link">Trabalhos</a></li>
                 </ul>
             </div>
 
             <div class="login-button">
-                <button><a href="./index.html">Home</a></button>
+                <button><a href="#">Home</a></button>
             </div>
 
             <div class="mobile-menu-icon">
