--- a/works.html
+++ b/works.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="login-button">
-                <button><a href="#">Home</a></button>
+                <button><a href="./index.html">Home</a></button>
             </div>
 
             <div class="mobile-menu-icon">
