Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+das<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -25,7 +25,7 @@
                 <ul>
                     <li class="nav-item"><a href="#biography" class="nav-link">SOBRE MIM</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
-                    <li class="nav-item"><a href="./works.html" class="nav-link">Trabalhos</a></li>
+                    <li class="nav-item"><a href="./Works.html" class="nav-link">Trabalhos</a></li>
                 </ul>
             </div>
 
