--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ das<!DOCTYPE html>
                 <ul>
                     <li class="nav-item"><a href="#biography" class="nav-link">SOBRE MIM</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
-                    <li class="nav-item"><a href="./Works.html" class="nav-link">Trabalhos</a></li>
+                    <li class="nav-item"><a href="./works.html" class="nav-link">Trabalhos</a></li>
                 </ul>
             </div>
 
