--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-das<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -23,7 +23,7 @@ das<!DOCTYPE html>
             </div>
             <div class="nav-list">
                 <ul>
-                    <li class="nav-item"><a href="#biography" class="nav-link">SOBRE MIM</a></li>
+                    <li class="nav-item"><a href="./index.html/#biography" class="nav-link">SOBRE MIM</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
                     <li class="nav-item"><a href="./works.html" class="nav-link">Trabalhos</a></li>
                 </ul>
