--- a/works.html
+++ b/works.html
@@ -19,7 +19,7 @@
             </div>
             <div class="nav-list">
                 <ul>
-                    <li class="nav-item"><a href="#biography" class="nav-link">SOBRE MIM</a></li>
+                    <li class="nav-item"><a href="./index.html" class="nav-link">SOBRE MIM</a></li>
                     <li class="nav-item"><a href="#biography" class="nav-link">Contato</a></li>
                     <li class="nav-item"><a href="./contacts.html" class="nav-link" target="_blank">Trabalhos</a></li>
                 </ul>
