--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="login-button">
-                <button><a href="#">Home</a></button>
+                <button><a href="./index.html">Home</a></button>
             </div>
 
             <div class="mobile-menu-icon">
@@ -116,7 +116,6 @@
 
 <!-- SCRIPTS -->
     <script src="./script.js"></script>
-    <script src="./script-slider.js"></script>
 
 </body>
 </html>
