--- a/works.html
+++ b/works.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="nav-bar">
             <div class="logo">
-                <a href="#"><h1>Portifólio</h1></a>
+                <a href="./index.html"><h1>Portifólio</h1></a>
             </div>
             <div class="nav-list">
                 <ul>
@@ -71,5 +71,7 @@
                 <p>Na Wieden Kennedy atuo como analista de TI prestando suporte á todos os colaboradores da agência de São Paulo e Argentina com todas as ferramentas do grupo. Sou responsável pelo controle de ativos, controles de contratos de locação de equipamentos, deploy de equipamentos Mac e Windows, integração de novos colaboradores á agência e sou um dos responsáveis por executar projetos e implementação de novas ferramentas de TI.</p><br>
                 <p>Dentro da agência atuo com o Active Directory para controle, cadastro de usuários e aplicação de grupos internos, suporte á ferramenta AdSolutions e AdTraffic, suporte á todas as ferramentas do Google Workspace, Jamf Pro e Desktop Central para a implantação de políticas de segurança e ferramentas de forma massiva e automatizada, controle de printserver, suporte ás salas de reunião e monitoramento da rede dentro da agência com experiência de equipamentos Aruba, HP, NetApp, VMWare e Nimble Storage</p>
     </section>
+
+    <script src="./script.js"></script>
 </body>
 </html>
