--- a/works.html
+++ b/works.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li class="nav-item"><a href="./index.html" class="nav-link">SOBRE MIM</a></li>
                     <li class="nav-item"><a href="#biography" class="nav-link">Contato</a></li>
-                    <li class="nav-item"><a href="./contacts.html" class="nav-link" target="_blank">Trabalhos</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Trabalhos</a></li>
                 </ul>
             </div>
 
