update index.html and create contacts.html

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     <div class="container-wrapper">
         <div class="wrapper">
             <div class="wrapper-holder">
-                <a id="slider-img-1" href="./works.html" target="_blank"></a>
-                <a id="slider-img-2" href="./works.html" target="_blank"></a>
+                <a id="slider-img-1" href="./works.html" ></a>
+                <a id="slider-img-2" href="./works.html" ></a>
             </div>
         </div>
     </div>
