--- a/works.html
+++ b/works.html
@@ -20,7 +20,7 @@
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"><a href="./index.html" class="nav-link">SOBRE MIM</a></li>
-                    <li class="nav-item"><a href="#biography" class="nav-link">Contato</a></li>
+                    <li class="nav-item"><a href="contacts.html" class="nav-link">Contato</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Trabalhos</a></li>
                 </ul>
             </div>
