--- a/contacts.html
+++ b/contacts.html
@@ -40,8 +40,8 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"><a href="./index.html" class="nav-link">SOBRE MIM</a></li>
-                <li class="nav-item"><a href="./contacts.html" class="nav-link">Contato</a></li>
-                <li class="nav-item"><a href="./works.html" class="nav-link" target="_blank">Trabalhos</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
+                <li class="nav-item"><a href="./works.html" class="nav-link">Trabalhos</a></li>
             </ul>
 
             <div class="login-button">
@@ -76,7 +76,7 @@
                         </li>
                         <li>
                             <a href="https://github.com/GabrielNascimentoCorp" target="_blank">
-                                <img src="./images/logo_github.png" alt="logo github">
+                                <img src="./images/logo_git_white_png-removebg-preview.png" alt="logo github">
                             </a>
                         </li>
                         <li>
@@ -94,13 +94,9 @@
         </div>
     </section>
 
-    <!-- FOOTER -->
+    <a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5599111112222" target="_blank">
+		<i class="fa fa-whatsapp"></i>
+	</a>
 
-    <footer class="fixarRodape">
-        <div class="container">
-            <p>
-                &copy; Gabriel Nascimento - Todos os Direitos Reservados - 2024
-            </p>
-        </div>
-    </footer>
+    <script src="./script.js"></script>
 </body>
