--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"><a href="#biography" class="nav-link">SOBRE MIM</a></li>
-                <li class="nav-item"><a href="#biography" class="nav-link">Contato</a></li>
-                <li class="nav-item"><a href="./contacts.html" class="nav-link" target="_blank">Trabalhos</a></li>
+                <li class="nav-item"><a href="./contacts.html" class="nav-link">Contato</a></li>
+                <li class="nav-item"><a href="./works.html" class="nav-link">Trabalhos</a></li>
             </ul>
 
             <div class="login-button">
