--- a/works.html
+++ b/works.html
@@ -37,12 +37,12 @@
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item"><a href="#biography" class="nav-link">SOBRE MIM</a></li>
-                <li class="nav-item"><a href="#biography" class="nav-link">Contato</a></li>
-                <li class="nav-item"><a href="./contacts.html" class="nav-link" target="_blank">Trabalhos</a></li>
+                <li class="nav-item"><a href="./contacts.html" class="nav-link">Contato</a></li>
+                <li class="nav-item"><a href="#" class="nav-link" target="_blank">Trabalhos</a></li>
             </ul>
 
             <div class="login-button">
-                <button><a href="#">Home</a></button>
+                <button><a href="./index.html">Home</a></button>
             </div>
         </div>
     </header>
