--- a/contacts.html
+++ b/contacts.html
@@ -62,7 +62,7 @@
                         <input type="text" name="name" placeholder="Seu nome ou nome da empresa" required>
                         <input type="email" name="email" placeholder="Seu e-mail" required>
                         <input type="tel" name="tel" placeholder="Seu telefone (opcional)" >
-                        <textarea placeholder="Digite sua mensagem" required></textarea>
+                        <textarea placeholder="Digite sua mensagem" name="message" required></textarea>
                         <button type="submit">Enviar</button>
 
                         <input type="hidden" name="_subject" value="Novo Contato!">
