Atualizar o contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -98,7 +98,7 @@
         </div>
     </section>
 
-    <a class="whatsapp-link" href="https://web.whatsapp.com/5511971582001" target="_blank">
+    <a class="whatsapp-link" href="https://we.me/5511971582001" target="_blank">
 		<i class="fa fa-whatsapp"></i>
 	</a>
 
